<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageView"
            android:layout_width="71dp"
            android:layout_height="75dp"
            android:layout_marginTop="45dp"
            app:srcCompat="@drawable/logo_large" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/str_pictures_uploaded"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:fontFamily="@font/sf_pro_bold" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:alpha="0.8"
            android:gravity="center"
            android:text="@string/str_your_photos_have_been_successfully_uploaded_please_open_the_app_to_view_them"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:fontFamily="@font/sf_pro_regular" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="45dp"
            android:text="@string/str_ok"
            android:textAlignment="center"
            app:backgroundTint="@color/purple_700" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>